resolve legend-log-item spillage in safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,28 @@ details.show-triangle > summary::-webkit-details-marker {
   /* display: flex; */
   font-size: 125%; /* enlarges details triangle on chrome only */
   /* list-style: initial; */
+  margin-top: 8px;
+  vertical-align: middle;
 }
+@media screen and (min-width: 640px) and (max-width: 1199px) {
+  details.show-triangle > summary::-webkit-details-marker {
+    margin-top: 7px;
+    margin-left: -1px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  details.show-triangle > summary::-webkit-details-marker {
+    margin-top:  6px;
+    margin-left: -2px;
+  }
+}
+
+/* details.show-triangle:open > summary::-webkit-details-marker {
+    padding-right: 12px;
+    margin-right: 6px;
+    margin-left: -3px;
+    color: red;
+} */
 
 /* adjust indent/border-l on child legend items only, while keeping all label text centered */
 .legend-log-child-item {
